--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="export/windows/ldjam53.exe"
+export_path="export/windows/DElive.exe"
 script_export_mode=1
 script_encryption_key=""
 
@@ -51,7 +51,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="export/web/ldjam53.html"
+export_path="export/web/DElive.html"
 script_export_mode=1
 script_encryption_key=""
 
@@ -86,7 +86,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="export/linux/ldjam53.x86_64"
+export_path="export/linux/DElive.x86_64"
 script_export_mode=1
 script_encryption_key=""
 
